Index.cshtml commented

--- a/RainbowColours/Views/Home/Index.cshtml
+++ b/RainbowColours/Views/Home/Index.cshtml
@@ -9,5 +9,5 @@
 {
     <canvas id=@colour width="100" height="100"></canvas>
 }
-
+@* Filling created canvases with colours *@
 <script src="~/Scripts/CanvasDrawing.js"></script>
